--- a/hackathon.html
+++ b/hackathon.html
@@ -37,13 +37,12 @@
     }   
     
 </style>
-<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
-<!--[if lte IE 8]><link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" /><![endif]-->
-<script src="//cdn.leafletjs.com/leaflet-0.5.1/leaflet.js" type="text/javascript" charset="utf-8"></script>
-<script src="//code.jquery.com/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/Bing.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/thinplatespline.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/implementation.js" type="text/javascript" charset="utf-8"></script>
+<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+<script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="./js/Bing.js"></script>
+<script src="./js/thinplatespline.min.js"></script>
+<script src="./js/implementation.js"></script>
 
 
 
