位置を奈良に合わせた

--- a/hackathon.html
+++ b/hackathon.html
@@ -4,7 +4,7 @@
 <meta content="yes" name="apple-mobile-web-app-capable" /> 
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" /> 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<title>岸和田城古地図3題</title> 
+<title>奈良市ハッカソン</title> 
 <style type="text/css" media="screen">
     body{
         padding: 0;
@@ -47,11 +47,11 @@
 
 
 <script type="text/javascript"> 
-var map1SW = [34.4509, 135.3613];//[34.62798, 135.78415]; //lat,lng
-var map1NE = [34.4705, 135.3815]; //lat,lng
+var map1SW = [34.6747, 135.8216]; //lat,lng
+var map1NE = [34.6943, 135.8418]; //lat,lng
 
-var map2SW = [500, 1131];//[304, 2688]; // x,y
-var map2NE = [1014, 500];//[4016, 160]; // x,y
+var map2SW = [500, 6286]; // x,y
+var map2NE = [9118, 500]; // x,y
 var map2MaxZoom = 6;
 
 
