--- a/hackathon.html
+++ b/hackathon.html
@@ -32,7 +32,9 @@
     }
 
     li.mapContainer div.mapContainer{
-        width:50%;
+        top: 0;
+        left: 0;
+        width:100%;
         height:100%;
     }   
     
