--- a/hackathon.html
+++ b/hackathon.html
@@ -76,7 +76,7 @@ var map2MaxZoom = 6;
 
 </script> 
 </head> 
-<body style="margin:0px; padding:0px;">
+<body>
 
     <div id="main">
         <ul class="mapContainer">
