--- a/hackathon.html
+++ b/hackathon.html
@@ -51,11 +51,15 @@
     }
 
     #slider {
+        padding:0 0 0 0;
+        margin:0 0 0 0;
         width: calc(100% - 100px);
         height: 50px;
     }
 
     #disp {
+        padding:0 0 0 0;
+        margin:0 0 0 0;
         width: 100px;
         height: 50px;
     }
