--- a/hackathon.html
+++ b/hackathon.html
@@ -62,6 +62,8 @@
         margin:0 0 0 0;
         width: 100px;
         height: 50px;
+        vertical-align: middle;
+        text-align: center;
     }
 
     li.mapContainer div.mapContainer{
