--- a/hackathon.html
+++ b/hackathon.html
@@ -91,7 +91,7 @@
         </li>
     </div>
     <div id="control">
-        <span><input type="range" name="slider" id="slider" value="0" min="710" max="2015"></span><span id="disp"><span id="year">2015</span>年</span>
+        <span><input type="range" name="slider" id="slider" value="0" min="710" max="2015" value="2015"></span><span id="disp"><span id="year">2015</span>年</span>
     </div> 
 </body> 
 <script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
