thinplatespline min => 無印へ

--- a/hackathon.html
+++ b/hackathon.html
@@ -97,7 +97,7 @@
 <script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="./js/Bing.js"></script>
-<script src="./js/thinplatespline.min.js"></script>
+<script src="./js/thinplatespline.js"></script>
 <script type="text/javascript"> 
 var map1SW = [34.6747, 135.8216]; //lat,lng
 var map1NE = [34.6943, 135.8418]; //lat,lng
