--- a/hackathon.html
+++ b/hackathon.html
@@ -99,11 +99,17 @@
 <script src="./js/Bing.js"></script>
 <script src="./js/thinplatespline.js"></script>
 <script type="text/javascript"> 
-var map1SW = [34.6747, 135.8216]; //lat,lng
-var map1NE = [34.6943, 135.8418]; //lat,lng
+//var map1SW = [34.6747, 135.8216]; //lat,lng
+//var map1NE = [34.6943, 135.8418]; //lat,lng
 
-var map2SW = [500, 6286]; // x,y
-var map2NE = [9118, 500]; // x,y
+//var map2SW = [500, 6286]; // x,y
+//var map2NE = [9118, 500]; // x,y
+
+var map1SW = [34.6795, 135.8267]; //lat,lng
+var map1NE = [34.6895, 135.8367]; //lat,lng
+
+var map2SW = [1000, 5786]; // x,y
+var map2NE = [8618, 1000]; // x,y
 var map2MaxZoom = 6;
 </script> 
 <script src="./js/implementation.js"></script>
