--- a/hackathon.html
+++ b/hackathon.html
@@ -15,6 +15,13 @@
         height:100%;
     }
     
+    #all, #info {
+        position: absolute;
+        margin: 0;
+        width:100%;
+        height:100%;
+    }    
+
     #main {
         position: absolute;
         margin: 0;
@@ -77,7 +84,7 @@
 <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 </head> 
 <body>
-
+    <div id="all">
     <div id="main">
         <ul class="mapContainer">
             <li class="mapContainer">
@@ -92,7 +99,15 @@
     </div>
     <div id="control">
         <span><input type="range" name="slider" id="slider" value="0" min="710" max="2015" value="2015"></span><span id="disp"><span id="year">2015</span>年</span>
-    </div> 
+    </div>
+    </div>
+    <div id="info" style="text-align:center;">
+        <div id="poi_name"></div>
+        <img id="poi_img" src=""></img>
+        <div id="poi_address"></div>
+        <div id="poi_desc"></div>
+        <button id="poi_back">戻る</div>
+    </div>
 </body> 
 <script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
