--- a/require.html
+++ b/require.html
@@ -21,10 +21,10 @@
 
 <div class="row-fluid controlview">
   <div class="col-xs-6 btn-container">
-    <input type="button" class="btn btn-block year_change" data-year="1868" value="1868年">
+    <input type="button" class="btn btn-block btn-info year_change" data-year="1868" value="1868年">
   </div>
   <div class="col-xs-6 btn-container">
-    <input type="button" class="btn btn-block year_change" data-year="2015" value="現代">
+    <input type="button" class="btn btn-block btn-info year_change" data-year="2015" value="現代">
   </div>
 </div>
 
