--- a/iwate.html
+++ b/iwate.html
@@ -5,6 +5,7 @@
 <title>岩手アプリ</title>
 <meta content="yes" name="apple-mobile-web-app-capable"> 
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -14,22 +15,22 @@
       <div id="hist1mapcontainer" class="col-xs-12 h100p">
         <div id="hist1map" class="map h100p"></div>
       </div>
-      <!--div id="hist2mapcontainer" class="col-xs-12 h100p">
+      <div id="hist2mapcontainer" class="col-xs-12 h100p">
         <div id="hist2map" class="map h100p"></div>
-      </div-->
+      </div>
       <div id="nowmapcontainer" class="col-xs-12 h100p">
         <div id="nowmap" class="map h100p"></div>
       </div>  
     </div>
 
     <div class="row-fluid controlview">
-      <div class="col-xs-6 btn-container">
-        <input type="button" class="btn btn-block btn-info year_change" data-year="1644" value="1644年">
+      <div class="col-xs-4 btn-container">
+        <input type="button" class="btn btn-block btn-info year_change" data-year="1644" value="正保元年">
       </div>
-      <!--div class="col-xs-4 btn-container">
-        <input type="button" class="btn btn-block btn-info year_change" data-year="1868" value="1868年">
-      </div-->
-      <div class="col-xs-6 btn-container">
+      <div class="col-xs-4 btn-container">
+        <input type="button" class="btn btn-block btn-info year_change" data-year="1735" value="江戸中期-末期">
+      </div>
+      <div class="col-xs-4 btn-container">
         <input type="button" class="btn btn-block btn-info year_change" data-year="2016" value="現代">
       </div>
     </div>
@@ -42,6 +43,18 @@
     <button id="poi_back">戻る</div>
   </div>  
 </div>
+  <div class="modal" id="gpsWait" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">GPS取得中</h4>
+        </div>
+        <div class="modal-body">
+          <p class="recipient">※盛岡城周辺の疑似経緯度を発行します</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
 <script src="js/config.js"></script>
