--- a/sabae.html
+++ b/sabae.html
@@ -18,6 +18,18 @@
       <div id="hist2mapcontainer" class="col-xs-12 h100p">
         <div id="hist2map" class="map h100p"></div>
       </div>
+      <div id="hist3mapcontainer" class="col-xs-12 h100p">
+        <div id="hist3map" class="map h100p"></div>
+      </div>
+      <div id="hist4mapcontainer" class="col-xs-12 h100p">
+        <div id="hist4map" class="map h100p"></div>
+      </div>
+      <div id="hist5mapcontainer" class="col-xs-12 h100p">
+        <div id="hist5map" class="map h100p"></div>
+      </div>
+      <div id="hist6mapcontainer" class="col-xs-12 h100p">
+        <div id="hist6map" class="map h100p"></div>
+      </div>
       <div id="nowmapcontainer" class="col-xs-12 h100p">
         <div id="nowmap" class="map h100p"></div>
       </div>  
@@ -26,26 +38,26 @@
     <div class="row-fluid controlview_2">
       <div class="row-fluid">
         <div class="col-xs-3 btn-container">
-          <input type="button" class="btn btn-block btn-info year_change" data-year="1644" value="正保元年">
+          <input type="button" class="btn btn-block btn-info year_change" data-year="1720" value="〜享保5年">
         </div>
         <div class="col-xs-3 btn-container">
-          <input type="button" class="btn btn-block btn-info year_change" data-year="1735" value="江戸中期-末期">
+          <input type="button" class="btn btn-block btn-info year_change" data-year="1735" value="江戸中期">
         </div>
         <div class="col-xs-3 btn-container">
-          <input type="button" class="btn btn-block btn-info year_change" data-year="2016" value="現代">
+          <input type="button" class="btn btn-block btn-info year_change" data-year="1867" value="明治維新前">
         </div>
         <div class="col-xs-3 btn-container">
-          <input type="button" class="btn btn-block btn-info year_change" data-year="2016" value="現代">
+          <input type="button" class="btn btn-block btn-info year_change" data-year="1914" value="大正3年">
         </div>
       </div>
       <div class="row-fluid">
-        <div class="col-xs-3 btn-container">
-          <input type="button" class="btn btn-block btn-info year_change" data-year="1644" value="正保元年">
+        <div class="col-xs-4 btn-container">
+          <input type="button" class="btn btn-block btn-info year_change" data-year="1963" value="〜昭和38年">
         </div>
-        <div class="col-xs-3 btn-container">
-          <input type="button" class="btn btn-block btn-info year_change" data-year="1735" value="江戸中期-末期">
+        <div class="col-xs-4 btn-container">
+          <input type="button" class="btn btn-block btn-info year_change" data-year="2002" value="平成14年">
         </div>
-        <div class="col-xs-6 btn-container">
+        <div class="col-xs-4 btn-container">
           <input type="button" class="btn btn-block btn-info year_change" data-year="2016" value="現代">
         </div>
       </div>
