スライダー修正

--- a/sabae.html
+++ b/sabae.html
@@ -37,10 +37,10 @@
 
     <div class="row-fluid controlview">
       <div class="col-xs-10 btn-container">
-        <input id="era_select" type="range" name="era_select" min="0" max="6" list="era_list" value="6" step="1">
+        <div id="era_select"></div>
       </div>
       <div class="col-xs-2 btn-container">
-        <input id="era_show" type="text" name="era_show" readonly="readonly">
+        <input id="era_show" type="text" name="era_show" readonly="readonly" style="width: 100%">
       </div>
     </div>
   </div>
