アプリロード中画面をつけた

--- a/sabae.html
+++ b/sabae.html
@@ -52,6 +52,18 @@
     <button id="poi_back">戻る</div>
   </div>  
 </div>
+  <div class="modal" id="loadWait" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">アプリロード中</h4>
+        </div>
+        <div class="modal-body">
+          <p class="recipient"><img src="img/loading-21.gif">アプリロード中です...</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="modal" id="gpsWait" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
