モード切り替えの言葉変更

--- a/sabae.html
+++ b/sabae.html
@@ -39,8 +39,8 @@
       <div class="col-xs-3 btn-container">
         <select name="map_type" id="map_type" style="width: 100%">
           <option value="plat">綺麗、正確</option>
-          <option value="affine">綺麗、同時</option>
-          <option value="tps">正確、同時</option>
+          <option value="affine">綺麗、重畳</option>
+          <option value="tps">正確、重畳</option>
         </select>
       </div>      
       <div class="col-xs-7 btn-container">
