--- a/sabae.html
+++ b/sabae.html
@@ -11,44 +11,24 @@
 <body>
 <div class="container-fluid h100p">
   <div id="all" class="row-fluid h100p">
-    <div class="row-fluid mainview">
-      <div id="hist1mapcontainer" class="col-xs-12 h100p">
-        <div id="hist1map" class="map h100p"></div>
-      </div>
-      <div id="hist2mapcontainer" class="col-xs-12 h100p">
-        <div id="hist2map" class="map h100p"></div>
-      </div>
-      <div id="hist3mapcontainer" class="col-xs-12 h100p">
-        <div id="hist3map" class="map h100p"></div>
-      </div>
-      <div id="hist4mapcontainer" class="col-xs-12 h100p">
-        <div id="hist4map" class="map h100p"></div>
-      </div>
-      <div id="hist5mapcontainer" class="col-xs-12 h100p">
-        <div id="hist5map" class="map h100p"></div>
-      </div>
-      <div id="hist6mapcontainer" class="col-xs-12 h100p">
-        <div id="hist6map" class="map h100p"></div>
-      </div>
-      <div id="nowmapcontainer" class="col-xs-12 h100p">
-        <div id="nowmap" class="map h100p"></div>
-      </div>  
+    <div class="row-fluid mainview"> 
     </div>
 
     <div class="row-fluid controlview" style="width: 100%">
-      <div class="col-xs-3 btn-container">
+      <div class="col-xs-4 btn-container">
         <select name="map_type" id="map_type" style="width: 100%">
-          <option value="plat">綺麗、正確</option>
-          <option value="affine">綺麗、重畳</option>
-          <option value="tps">正確、重畳</option>
+          <option value="plat">位置正確/古地図美麗/地図切替</option>
+          <option value="affine">位置不正確/古地図美麗/地図重畳</option>
+          <option value="tps">位置正確/古地図歪み/地図重畳</option>
         </select>
       </div>      
-      <div class="col-xs-7 btn-container">
-        <div id="era_select"></div>
+      <div class="col-xs-8 btn-container">
+        <select name="era_select" id="era_select" style="width: 100%">
+        </select>
       </div>
-      <div class="col-xs-2 btn-container">
+      <!--div class="col-xs-2 btn-container">
         <input id="era_show" type="text" name="era_show" readonly="readonly" style="width: 100%">
-      </div>
+      </div-->
     </div>
   </div>
   <div id="info" class="row-fluid h100p">
