--- a/sanada.html
+++ b/sanada.html
@@ -15,28 +15,31 @@
     </div>
 
     <div class="row-fluid controlview" style="width: 100%">
-      <!--div class="col-xs-4 btn-container">
-        <select name="map_type" id="map_type" style="width: 100%">
-          <option value="plat">位置正確/古地図美麗/地図切替</option>
-          <option value="affine">位置不正確/古地図美麗/地図重畳</option>
-          <option value="tps">位置正確/古地図歪み/地図重畳</option>
-        </select>
-      </div-->
       <input type="hidden" name="map_type" id="map_type" value="plat">
       <div class="col-xs-12 btn-container">
         <select name="era_select" id="era_select" style="width: 100%">
         </select>
       </div>
     </div>
-  </div>
-  <div id="info" class="row-fluid h100p">
-    <div id="poi_name"></div>
-    <img id="poi_img" src=""></img>
-    <div id="poi_address"></div>
-    <div id="poi_desc"></div>
-    <button id="poi_back">戻る</div>
-  </div>  
+  </div> 
 </div>
+  <div class="modal" id="poi_info" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">&#215;</span><span class="sr-only">閉じる</span>
+          </button>
+          <h4 class="modal-title" id="poi_name"></h4>
+        </div>
+        <div class="modal-body">
+          <p class="col-xs-12 poi_img"><img id="poi_img" src=""></img></p>
+          <p class="recipient" id="poi_address"></p>
+          <p class="recipient" id="poi_desc"></p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="modal" id="loadWait" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -67,5 +70,5 @@
 <script>
   var appid = "sanadaapp";
 </script>
-<script src="js/commonapp.js"></script>
+<script src="js/commonapp2.js"></script>
 </html>
