中央赤丸対応

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
   <div class="container-fluid h100p w100p">
     <div id="all" class="row-fluid h100p">
-      <div class="row-fluid mainview"> </div>
+      <div class="row-fluid mainview">
+        <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./img/redcircle.png">
+      </div>
       <div class="row-fluid controlview" style="width: 100%">
         <input type="hidden" name="map_type" id="map_type" value="plat">
         <div class="col-xs-12 btn-container">
