--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
         <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./img/redcircle.png">
         <div class="slick-box">
           <div class="slick-class">
-            <div>your content1</div>
+            <!--div>your content1</div>
             <div>your content2</div>
-            <div>your content3</div>
+            <div>your content3</div-->
           </div>
         </div>
       </div>
-      <div class="row-fluid controlview" style="width: 100%">
-        <input type="hidden" name="map_type" id="map_type" value="plat">
+      <input type="hidden" name="map_type" id="map_type" value="plat">
+      <!--div class="row-fluid controlview" style="width: 100%">
+
         <div class="col-xs-12 btn-container">
           <select name="era_select" id="era_select" style="width: 100%"></select>
         </div>
-      </div>
+      </div-->
     </div> 
   </div>
   <div class="modal" id="poi_info" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
