#6 ピン画像のアップデートなど

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid h100p w100p">
     <div id="all" class="row-fluid h100p">
       <div class="row-fluid mainview">
-        <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./img/redcircle.png">
+        <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./parts/redcircle.png">
         <div class="slick-box">
           <div class="slick-class">
             <!--div>your content1</div>
@@ -55,7 +55,7 @@
           <h4 class="modal-title">アプリロード中</h4>
         </div>
         <div class="modal-body">
-          <p class="recipient"><img src="img/loading-21.gif">アプリロード中です...</p>
+          <p class="recipient"><img src="parts/loading.gif">アプリロード中です...</p>
         </div>
       </div>
     </div>
