--- a/index.html
+++ b/index.html
@@ -83,5 +83,5 @@
     if (hash[0] == "appid") appid = hash[1];
   }
 </script>
-<script src="js/app.js"></script>
+<script src="js/built.js"></script>
 </html>
