--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <script src="js/config.js"></script>
 <script>
   var appid = "sample";
-  var histmap_required = ["tps"];
+  var histmap_required = ["tps","tin"];
   var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
   for(var i = 0; i < hashes.length; i++) {
     hash = hashes[i].split('=');
