--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 <script src="js/config.js"></script>
 <script>
   var appid = "sample";
-  var app_argo = null;
+  var appArgo = null;
   var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
   for(var i = 0; i < hashes.length; i++) {
     hash = hashes[i].split('=');
     if (hash[0] == "appid") appid = hash[1];
-    if (hash[0] == "app_argo") app_argo = hash[1];
+    if (hash[0] == "app_argo") appArgo = hash[1];
   }
 </script>
 <script src="js/app.js"></script>
