#34 GPS地図範囲外の時の対応、切り替え時の地図範囲外時の対応、マーカー地図範囲外非表示追加。

--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
       </div>
     </div>
   </div>
+  <div class="modal" id="gpsDialog" tabindex="-1" role="dialog" aria-labelledby_="staticModalLabel" aria-hidden_="true" data-show="true" data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">&#215;</span><span class="sr-only">閉じる</span>
+          </button>
+          <h4 class="modal-title" id="gpsDialogTitle"></h4>
+        </div>
+        <div class="modal-body">
+          <p id="gpsDialogBody" class="recipient"></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 <script src="js/require.min.js"></script>
 <script>
