--- a/index.html
+++ b/index.html
@@ -13,23 +13,14 @@
   <div class="container-fluid h100p w100p">
     <div id="all" class="row-fluid h100p">
       <div class="row-fluid mainview">
-        <div id="map_divcontainer" class="col-xs-12 h100p mapcontainer w100p"><div id="map_div" class="map h100p"></div></div>
+        <div id="map_div" class="col-xs-12 h100p w100p"></div></div>
         <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./parts/redcircle.png">
         <div class="slick-box">
           <div class="slick-class">
-            <!--div>your content1</div>
-            <div>your content2</div>
-            <div>your content3</div-->
           </div>
         </div>
       </div>
       <input type="hidden" name="map_type" id="map_type" value="plat">
-      <!--div class="row-fluid controlview" style="width: 100%">
-
-        <div class="col-xs-12 btn-container">
-          <select name="era_select" id="era_select" style="width: 100%"></select>
-        </div>
-      </div-->
     </div> 
   </div>
   <div class="modal" id="poi_info" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
@@ -37,7 +28,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">
-            <span aria-hidden="true">&#215;</span><span class="sr-only">閉じる</span>
+            <span aria-hidden="true">&#215;</span><span class="sr-only" data-i18n="html.close"></span>
           </button>
           <h4 class="modal-title" id="poi_name"></h4>
         </div>
@@ -53,10 +44,10 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">アプリロード中</h4>
+          <h4 class="modal-title" data-i18n="html.app_loading_title"></h4>
         </div>
         <div class="modal-body">
-          <p class="recipient"><img src="parts/loading.gif">アプリロード中です...</p>
+          <p class="recipient"><img src="parts/loading.gif"><span data-i18n="html.app_loading_body"></span></p>
         </div>
       </div>
     </div>
@@ -65,7 +56,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">GPS取得中</h4>
+          <h4 class="modal-title"><span data-i18n="html.acquiring_gps"></span></h4>
         </div>
         <div class="modal-body">
           <p id="gps_etc" class="recipient"></p>
@@ -78,7 +69,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">
-            <span aria-hidden="true">&#215;</span><span class="sr-only">閉じる</span>
+            <span aria-hidden="true">&#215;</span><span class="sr-only" data-i18n="html.close"></span>
           </button>
           <h4 class="modal-title" id="gpsDialogTitle"></h4>
         </div>
