--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <div class="slick-class">
           </div>
         </div>
+        <div class="form-group opacity-slider hide">
+          <input type="range" min ="0" max="100" step ="1" value="0" class="form-control">
+        </div>
       </div>
       <input type="hidden" name="map_type" id="map_type" value="plat">
     </div> 
