--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="container-fluid h100p w100p">
     <div id="all" class="row-fluid h100p">
       <div class="row-fluid mainview">
-        <div id="map_div" class="col-xs-12 h100p w100p"></div>
-        <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./parts/redcircle.png">
-        <div class="slick-box ol-control">
-          <div class="slick-class">
+        <div id="map_div" class="col-xs-12 h100p w100p">
+          <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./parts/redcircle.png">
+          <div class="slick-box ol-control">
+            <div class="slick-class"></div>
           </div>
         </div>
         <div class="form-group opacity-slider hide">
