--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 </body>
-<script src="js/require.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.min.js"></script>
 <script>
 require(['js/config'],function() {
     require(['app'], function (app) {
