--- a/editor/index.html
+++ b/editor/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
@@ -12,14 +12,15 @@
   <title>Theme Template for Bootstrap</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="common/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/non-responsive.css" rel="stylesheet">
   <!-- Bootstrap theme -->
-  <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+  <link href="common/css/bootstrap-theme.min.css" rel="stylesheet">
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="../css/ol.css" rel="stylesheet">
+  <link href="common/css/ol.css" rel="stylesheet">
   <link href="css/theme.css" rel="stylesheet">
 </head>
 
@@ -61,9 +62,9 @@
 
 <div class="container main" role="main">
   <div class="row h100">
-    <div id="map1" class="col-md-6 h100">
+    <div id="map1" class="col-xs-6 h100">
     </div>
-    <div id="map2" class="col-md-6 h100">
+    <div id="map2" class="col-xs-6 h100">
     </div>
   </div>
 </div> <!-- /container -->
@@ -72,11 +73,11 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="../js/bootstrap-native.min.js"></script>
+<script src="common/js/bootstrap-native.min.js"></script>
 <script src="js/docs.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="js/ie10-viewport-bug-workaround.js"></script>
-<script src="../js/ol-debug.js"></script>
+<script src="common/js/ol-debug.js"></script>
 <script>
     var map1 = new ol.Map({
         layers: [
