Wide tabor, disable some tabs

--- a/editor/index.html
+++ b/editor/index.html
@@ -62,11 +62,11 @@
 
 <div class="container main" role="main">
   <!-- タブ・メニュー -->
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs nav-justified">
     <li><a href="#sampleContentA" data-toggle="tab">タブＡ</a></li>
     <li class="active"><a href="#sampleContentB" data-toggle="tab">タブＢ</a></li>
     <li><a href="#sampleContentC" data-toggle="tab">タブＣ</a></li>
-    <li><a href="#sampleContentD" data-toggle="tab">タブＤ</a></li>
+    <li class="disabled"><a href="#sampleContentD">タブＤ</a></li>
   </ul>
 
   <!-- タブ内容 -->
