--- a/editor/index.html
+++ b/editor/index.html
@@ -9,15 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>Theme Template for Bootstrap</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="common/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/non-responsive.css" rel="stylesheet">
-  <!-- Bootstrap theme -->
-  <link href="common/css/bootstrap-theme.min.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="common/css/ol.css" rel="stylesheet">
+  <title>Maplat Editor</title>
   <link href="css/theme.css" rel="stylesheet">
 </head>
 
@@ -33,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bootstrap theme</a>
+      <a class="navbar-brand" href="#">Maplat Editor</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
