Finish setting window coding

--- a/editor/index.html
+++ b/editor/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="form-group col-xs-2">
             <label for="createID" class="w100">　</label>
-            <button type="button" class="btn" id="createID">地図ID生成</button>
+            <button type="button" class="btn btn-secondary" id="createID">地図ID生成</button>
           </div>
         </div>
       </form>
@@ -132,7 +132,7 @@
 <script src="common/js/require.min.js"></script>
 <script>
 requirejs(['js/config'],function() {
-    requirejs(['app'], function (app) {
+    requirejs(['index'], function (app) {
     });
 });
 </script>
